feat: optimization of api processing time